--- a/style.css
+++ b/style.css
@@ -6,187 +6,19 @@
     transition: .25s all ease;
 }
 body{
+    background-color: #ee8829;
     font-family: "Montserrat",sans-serif;
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: 1px;
 }
-/* Background Animation */
-.background{
-    z-index: -1;
-    position: fixed;
-    top:0;
-    left:0;
-    background:linear-gradient(to left, #3672b6,#0a1365);
-    width: 100%;
-    height: 100%;
-    margin: 0;
-}
-.box-area{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width:100%;
-    height: 100%;
-    overflow:hidden;
-}
-.box-area li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 25px;
-    height: 25px;
-    background:rgba(255,255,255,0.2);
-    animation: animate 20s linear infinite;
-    bottom: -15px;
-}
-.box-area li:nth-child(1){
-    left: 86%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-.box-area li:nth-child(2){
-    left: 12%;
-    width: 30px;
-    height: 30px;
-    animation-delay: 1.5s;
-}
-.box-area li:nth-child(3){
-    left: 70%;
-    width: 100px;
-    height: 100px;
-    animation-delay: 5.5s;
-}
-.box-area li:nth-child(4){
-    left: 70%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 15s;
-}
-.box-area li:nth-child(5){
-    left: 65%;
-    width: 40px;
-    height: 40px;
-    animation-delay: 0s;
-}
-.box-area li:nth-child(6){
-    left: 15%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3.5s;
-}
-.box-area li:nth-child(7){
-    left: 30%;
-    width: 100px;
-    height: 100px;
-    animation-delay: 0.5s;
-}
-.box-area li:nth-child(8){
-    left: 89%;
-    width: 220px;
-    height: 220px;
-    animation-delay: 0.3s;
-}
-.box-area li:nth-child(9){
-    left: 40%;
-    width: 120px;
-    height: 120px;
-    animation-delay: 0s;
-}
-.box-area li:nth-child(10){
-    left: 20%;
-    width: 100px;
-    height: 100px;
-    animation-delay: 0.3s;
-}
-.box-area li:nth-child(11){
-    left: 67%;
-    width: 90px;
-    height: 90px;
-    animation-delay: 0.1s;
-}
-.box-area li:nth-child(12){
-    left: 45%;
-    width: 140px;
-    height: 140px;
-    animation-delay: 0.5s;
-}
-
-@keyframes animate {
-    0%{
-        border-radius: 0;
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-    }
-    100%{
-        border-radius: 100%;
-        transform: translateY(-900px) rotate(360deg);
-        opacity: 0;
-    }
-
-}
 
 /* Actual Content */
 
-/* Login navigation bar */
-
-.login-nav{
-    position:relative;
-    padding: 0%;
-    margin:0 0 3rem 1rem;
+/* Heading of Sign Up */
+.heading{
+    text-align: center;
 }
-
-.login-nav__item{
-    list-style: none;
-    display:inline-block;
-}
-
-.login-nav__item  +.login-nav__item{
-    margin-left: 2.25rem;
-}
-
-.login-nav__item a{
-    position: relative;
-    color: rgba(255,255,255,0.5);
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: 400;
-    font-size: 1.25rem;
-    padding-bottom: .5rem;
-    transition: .20s all ease;
-}
-
-.login-nav__item.active a,
-.login-nav__item a:hover{
-    color: #fff;
-    transition: all 0.15s ease;
-}
-
-.login-nav__item a:after{
-    content:"";
-    display: inline-block;
-    height: 10px;
-    background-color: rgb(255, 255, 255);
-    position: absolute;
-    right: 100%;
-    bottom: -1px;
-    left: 0;
-    border-radius: 50%;
-    transition: all .15s ease;
-}
-
-.login-nav__item a:hover:after,
-.login-nav__item.active a:after{
-    background-color: rgb(17,97,237);
-    height: 2px;
-    right: 0;
-    bottom: 2px;
-    border-radius: 0%;
-    transition: all .20s ease;
-}
-
 
 /* Login Container & Signup Container */
 .login-container,
@@ -199,11 +31,9 @@ body{
     width: 100%;
     max-width: 525px;
     min-height: 620px;
-    background-color: rgba(202, 85, 228, 0.466);
+    background-color: rgba(240, 225, 21, 0.466);
     box-shadow: 0 50px 70px -20px rgba(0,0,0,0.85);
 }
-
-
 
 .login-container:after,
 .signup-container:after{
@@ -215,7 +45,7 @@ body{
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: radial-gradient(ellipse at left bottom,rgba(44, 47, 130, 0.7) 44%,rgba(199, 132, 199, 0.7) 100%);
+    background-image: radial-gradient(ellipse at left bottom,rgba(231, 122, 21, 0.788) 44%,rgba(134, 221, 35, 0.7) 100%);
     box-shadow: 0 -20px 150px -20px rgba(0,0,0,0.5);
 }
 
@@ -224,7 +54,7 @@ body{
     position: relative;
     z-index:1;
     padding-bottom: 3rem;
-    border-bottom: 1px solid rgba(255,255,255,0.5);
+    border-bottom: 1px solid rgba(245, 142, 142, 0.5);
 }
 
 
